# file_tab_opener

./: .gitignore  CHANGELOG.md  File Tab Opener.spec  FileTabOpener.icns  LICENSE  README.md  README_ja.md  README_ko.md  README_zh_CN.md  README_zh_TW.md  file_tab_opener.py  gui.py  i18n.py  opener_mac.py  opener_win.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
assets/: FileTabOpener.icns
file_tab_opener/: __init__.py  __main__.py  config.py  gui.py  history.py  i18n.py  main_window.py  opener_mac.py  opener_win.py  tab_group.py  widgets.py
tests/: test_config.py  test_gui.py  test_i18n.py  test_opener_mac.py  test_opener_win.py
